--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "br.com.suitesistemas.portsmobile"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 22
-        versionName "1.05"
+        versionCode 24
+        versionName "1.07"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
     }
@@ -21,8 +21,8 @@ android {
             buildConfigField "String", 'BASE_URL', "\"https://api.suitesistemas.com.br/app/\""
         }
         debug {
-            //buildConfigField "String", 'BASE_URL', "\"https://api.suitesistemas.com.br/app/\""
-            buildConfigField "String", 'BASE_URL', "\"http://192.168.0.106:8080/app/\""
+//            buildConfigField "String", 'BASE_URL', "\"https://api.suitesistemas.com.br/app/\""
+            buildConfigField "String", 'BASE_URL', "\"http://192.168.0.110:8080/app/\""
         }
     }
     dataBinding {
@@ -45,6 +45,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.github.razir.progressbutton:progressbutton:1.0.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
@@ -52,12 +53,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.json:json:20190722'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
-    implementation 'com.github.clans:fab:1.6.4'
-    implementation 'com.github.razir.progressbutton:progressbutton:1.0.3'
-    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+    implementation 'info.androidhive:fontawesome:0.0.5'
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
-    
+
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
